--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.1",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
@@ -18,7 +19,11 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
+    "react-hook-form": "^7.46.1",
+    "react-icons": "^4.11.0",
+    "react-toastify": "^9.1.3",
+    "tailwindcss": "3.3.2",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "eslint-config-airbnb": "^19.0.4",
