--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -9,13 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.10",
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
+    "axios": "^1.5.0",
+    "expo": "~49.0.8",
     "expo-status-bar": "~1.6.0",
-    "react": "18.2.0",
-    "react-native": "0.72.4"
+    "formik": "^2.4.4",
+    "react": "^18.2.0",
+    "react-native": "^0.72.4",
+    "react-native-safe-area-context": "^4.6.3",
+    "react-native-screens": "~3.22.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.22.19",
+    "react-devtools": "^4.28.0"
   },
   "private": true
 }
