--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -13,17 +13,21 @@
     "@reduxjs/toolkit": "^1.9.5",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "chart.js": "3.5.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "classnames": "^2.3.2",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
     "next": "13.4.8",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-chartjs-2": "3.0.4",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.2",
     "react-toastify": "^9.1.3",
+    "sass": "^1.68.0",
     "tailwindcss": "3.3.2",
     "yup": "^1.2.0"
   },
