--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -13,11 +13,13 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "axios": "^1.5.0",
-    "expo": "~49.0.8",
+    "expo": "^49.0.11",
+    "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
     "formik": "^2.4.4",
     "react": "^18.2.0",
-    "react-native": "^0.72.4",
+    "react-native": "0.72.5",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
     "yup": "^1.2.0"
