--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,7 @@
   "description": "backend pbl6",
   "main": "index.js",
   "scripts": {
-    "start": "node ./app.js",
+    "start": "nodemon ./app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -13,8 +13,18 @@
   "author": "Nguyen, Tu, Huy, Dat, Vy",
   "license": "ISC",
   "dependencies": {
+    "babel-preset-env": "^1.7.0",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "chalk": "^4.1.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "mongoose": "^7.5.0"
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.0",
+    "nodemon": "^3.0.1",
+    "validator": "^13.11.0"
   }
 }
