--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^8.1.2",
     "react-toastify": "^9.1.3",
     "sass": "^1.68.0",
+    "swiper": "^9.4.1",
     "tailwindcss": "3.3.2",
     "yup": "^1.2.0"
   },
