--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.1",
+    "@mui/material": "^5.14.11",
+    "@mui/x-data-grid": "^6.15.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "antd": "^5.10.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "chart.js": "3.5.1",
