--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "start": "yarn clean && expo start",
+    "android": "yarn clean && expo start --android",
+    "ios": "yarn clean && expo start --ios",
+    "web": "yarn clean && expo start --web",
+    "clean": "rimraf .expo out"
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.8",
@@ -18,15 +19,16 @@
     "expo-status-bar": "~1.6.0",
     "formik": "^2.4.4",
     "react": "^18.2.0",
-    "react-native": "0.72.5",
+    "react-native": "0.72.6",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-safe-area-context": "^4.6.3",
+    "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.19",
-    "react-devtools": "^4.28.0"
+    "react-devtools": "^4.28.0",
+    "rimraf": "^5.0.5"
   },
   "private": true
 }
