--- a/Backend/.env
+++ b/Backend/.env
@@ -1,4 +1,4 @@
 #Environment variables  
 PORT = 3030
-ACCESS_TOKEN_SECRET = 
+ACCESS_TOKEN_SECRET = "This is a secret key of JWT"
 MONGO_URI = "mongodb+srv://pbl6admin:pbl6admin@pbl6.oak782k.mongodb.net/BackendPBL?retryWrites=true&w=majority"
