--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "babel-preset-env": "^1.7.0",
     "bcrypt": "^5.1.1",
+    "body-parse": "^0.1.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -22,7 +23,8 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.5.0",
+    "mongodb": "^6.2.0",
+    "mongoose": "^7.6.4",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "validator": "^13.11.0"
