--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./app.js",
+    "build": "npm install && echo 'Building process completed'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
