--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.4.0",
     "chart.js": "3.5.1",
     "classnames": "^2.3.2",
+    "date-fns": "^2.30.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
     "next": "13.4.7",
