feat: add swagger to backend

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -28,7 +28,8 @@
     "mongoose": "^7.6.4",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
