--- a/Backend/.env
+++ b/Backend/.env
@@ -2,3 +2,12 @@
 PORT = 3030
 ACCESS_TOKEN_SECRET = "This is a secret key of JWT"
 MONGO_URI = "mongodb+srv://pbl6admin:pbl6admin@pbl6.oak782k.mongodb.net/BackendPBL?retryWrites=true&w=majority"
+
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=hkhuy220802@gmail.com
+MAIL_PASSWORD=ojncizfbzqeuaznr
+MAIL_ENCRYPTION=TLS
+MAIL_FROM_ADDRESS=hkhuy220802@gmail.com
+MAIL_FROM_NAME="${APP_NAME}"
