--- a/Backend/.env
+++ b/Backend/.env
@@ -6,8 +6,8 @@ MONGO_URI = "mongodb+srv://pbl6admin:pbl6admin@pbl6.oak782k.mongodb.net/BackendP
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=hkhuy220802@gmail.com
-MAIL_PASSWORD=ojncizfbzqeuaznr
+MAIL_USERNAME=nthdv6969@gmail.com
+MAIL_PASSWORD=tvsnwjainqtwnqzr
 MAIL_ENCRYPTION=TLS
-MAIL_FROM_ADDRESS=hkhuy220802@gmail.com
+MAIL_FROM_ADDRESS=nthdv6969@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
