--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-native": "0.72.6",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "yup": "^1.2.0"
