--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "axios": "^1.5.0",
+    "date-fns": "^2.30.0",
     "expo": "^49.0.11",
     "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
@@ -26,10 +27,18 @@
     "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-toast-message": "^2.1.8",
     "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.19",
+    "eslint": "^8.55.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-unused-imports": "^3.0.0",
+    "prettier": "^3.1.0",
     "react-devtools": "^4.28.0",
     "rimraf": "^5.0.5"
   },
