--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -24,15 +24,18 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
     "next": "13.4.7",
+    "nprogress": "^0.2.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-chartjs-2": "4.1.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
     "react-icons": "^4.11.0",
+    "react-paginate": "^8.2.0",
     "react-redux": "^8.1.2",
     "react-toastify": "^9.1.3",
     "sass": "^1.68.0",
+    "sweetalert2": "^11.10.1",
     "swiper": "^9.4.1",
     "tailwindcss": "3.3.2",
     "yup": "^1.2.0"
