--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -33,6 +33,7 @@
     "react-icons": "^4.11.0",
     "react-paginate": "^8.2.0",
     "react-redux": "^8.1.2",
+    "react-select": "^5.8.0",
     "react-toastify": "^9.1.3",
     "sass": "^1.68.0",
     "sweetalert2": "^11.10.1",
