--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -26,6 +26,7 @@
     "next": "13.4.7",
     "nprogress": "^0.2.0",
     "postcss": "8.4.24",
+    "primereact": "^10.2.1",
     "react": "18.2.0",
     "react-chartjs-2": "4.1.0",
     "react-dom": "18.2.0",
