--- a/Backend/package.json
+++ b/Backend/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "jade": "^1.9.2",
     "jquery": "^3.7.1",
