--- a/Backend/.env
+++ b/Backend/.env
@@ -16,4 +16,4 @@ vnp_TmnCode="2I11YTDH"
 vnp_HashSecret="FYBXTLOIEBWXSZOTAZBAHVMOSNZFXUJY"
 vnp_Url="https://sandbox.vnpayment.vn/paymentv2/vpcpay.html"
 vnp_Api="https://sandbox.vnpayment.vn/merchant_webapi/api/transaction"
-vnp_ReturnUrl="http://localhost:3030/api/payment/vnpay_ipn"
+vnp_ReturnUrl="https://nthdv-pbl6.up.railway.app/api/payment/vnpay_ipn"
