--- a/Backend/.env
+++ b/Backend/.env
@@ -12,8 +12,8 @@ MAIL_ENCRYPTION=TLS
 MAIL_FROM_ADDRESS=nthdv6969@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
-vnp_TmnCode="2I11YTDH"
-vnp_HashSecret="FYBXTLOIEBWXSZOTAZBAHVMOSNZFXUJY"
+vnp_TmnCode="DCO3NHP6"
+vnp_HashSecret="SGSFFLXTBVLPVYKWPUFHCZQHXXBHIMYH"
 vnp_Url="https://sandbox.vnpayment.vn/paymentv2/vpcpay.html"
 vnp_Api="https://sandbox.vnpayment.vn/merchant_webapi/api/transaction"
-vnp_ReturnUrl="https://pbl-6-pink.vercel.app/api/payment/vnpay_return"
+vnp_ReturnUrl="https://nthdv-pbl6.up.railway.app/api/payment/vnpay_return"
