--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -29,7 +29,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-toast-message": "^2.1.8",
-    "react-native-webview": "^13.6.3",
+    "react-native-webview": "13.2.2",
     "yup": "^1.2.0"
   },
   "devDependencies": {
