--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@floating-ui/react": "^0.26.4",
     "@hookform/resolvers": "^3.3.1",
     "@mui/material": "^5.14.11",
     "@mui/x-data-grid": "^6.15.0",
@@ -23,6 +24,7 @@
     "date-fns": "^2.30.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
+    "framer-motion": "^10.16.16",
     "next": "13.4.7",
     "nprogress": "^0.2.0",
     "postcss": "8.4.24",
