--- a/Backend/.env
+++ b/Backend/.env
@@ -17,4 +17,4 @@ vnp_HashSecret="SGSFFLXTBVLPVYKWPUFHCZQHXXBHIMYH"
 vnp_Url="https://sandbox.vnpayment.vn/paymentv2/vpcpay.html"
 vnp_Api="https://sandbox.vnpayment.vn/merchant_webapi/api/transaction"
 # vnp_ReturnUrl="https://nthdv-pbl6.up.railway.app/vnpay_return"
-vnp_ReturnUrl="https://nthdv-pbl6.up.railway.app/api/payment/payment_online"
+vnp_ReturnUrl="https://nthdv-pbl6.up.railway.app/ass"
