--- a/Backend/.env
+++ b/Backend/.env
@@ -18,3 +18,4 @@ vnp_Url="https://sandbox.vnpayment.vn/paymentv2/vpcpay.html"
 vnp_Api="https://sandbox.vnpayment.vn/merchant_webapi/api/transaction"
 # vnp_ReturnUrl="https://nthdv-pbl6.up.railway.app/vnpay_return"
 vnp_ReturnUrl="https://nthdv-pbl6.up.railway.app/ass"
+# vnp_ReturnUrl="https://nthdv-pbl6.up.railway.app/api/payment/payment_online"
