--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -26,6 +26,7 @@
     "eslint-config-next": "13.4.8",
     "framer-motion": "^10.16.16",
     "i18next": "^23.7.12",
+    "moment": "^2.30.1",
     "next": "13.4.7",
     "nprogress": "^0.2.0",
     "postcss": "8.4.24",
